added carousel, calendar and whatsapp

--- a/src/Appartments.scss
+++ b/src/Appartments.scss
@@ -1,5 +1,11 @@
 #appartments {
+  padding: 5rem 0;
   text-align: center;
   letter-spacing: 0.5rem;
   font-weight: bolder;
+  h2 {
+    font-size: 2rem;
+  }
 }
+
+
