--- a/src/Contact.scss
+++ b/src/Contact.scss
@@ -1,6 +1,22 @@
 #contact {
   border-top: 1px solid grey;
-  text-align: center;
   letter-spacing: 0.5rem;
   font-weight: bolder;
+  padding: 5rem 1rem;
+  h2 {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  form {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+    font-size: 1.5rem;
+    * {
+      padding: 0.5rem;
+      // margin-bottom: 0.5rem;
+    }
+  }
 }
