--- a/src/Header.scss
+++ b/src/Header.scss
@@ -10,18 +10,18 @@
 .header {
   display: flex;
   position: fixed;
+  top: 0;
   z-index: 10;
   width: 100%;
   // align-items: center;
   /* justify-content: center; */
   // font-size: calc(10px + 2vmin);
   // padding: 1rem;
-  .logo {
-    height: 20vmin;
-    // padding: 0.5rem;
-    background-color: #fff;
-    border-radius: 50%;
-  }
+  // .logo {
+  //   height: 20vmin;
+  //   background-color: #fff;
+  //   border-radius: 50%;
+  // }
   .nav {
     cursor: pointer;
     width: 100%;
@@ -44,7 +44,16 @@
   }
 }
 
-
+@media only screen and (max-width: 600px) {
+  .header {
+    .nav {
+      a {
+        font-size: 1rem;
+        padding: 1rem 1rem;
+      }
+    }
+  }
+}
 
 
 /* 
