added component folder

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,4 +1,7 @@
 #contact {
+  max-width: 40vw;
+  margin: 10rem auto;
+  background-color: #fff;
   border-top: 1px solid grey;
   letter-spacing: 0.5rem;
   font-weight: bolder;
