--- a/src/index.scss
+++ b/src/index.scss
@@ -6,17 +6,20 @@ $grey: rgb(29, 28, 28);
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
   box-sizing: border-box;
   color: $grey;
+  scroll-behavior: smooth;
   // font-family: 'Open Sans', sans-serif;
   font-family: 'Bigelow Rules', cursive;
   font-family: 'Open Sans Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-size: cover;
 }
 
 .App {
-  height: 100vh;
+  height: 100%;
+  padding-bottom: 1rem;
 }
 
